src/objects/Campaign_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Band__c</fullName>
        <label>Band</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Area__c</fullName>
        <label>Practice Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Campaign Settings</label>
</CustomObject>